Fix bad wrapping on solution on mentor dashboard

--- a/app/assets/stylesheets/pages/mentor-dashboard.scss
+++ b/app/assets/stylesheets/pages/mentor-dashboard.scss
@@ -210,7 +210,7 @@ $blue: #4A90E2;
                 clear:none;
             }
             @include width-medium() {
-                padding-left:10px;
+                padding-left:140px;
                 border-left:2px solid #ddd;
             }
             margin-top:6px;
